--- a/index.html
+++ b/index.html
@@ -1,79 +1,103 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Curriculum</title>
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
+<!-- CDN Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+
+<!-- Google fonts Poppins -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400&display=swap" rel="stylesheet">
+
+        <!-- Mi estilo css -->
 
     <link rel="stylesheet" href="./assets/css/style.css" />
-  </head>
+</head>
 
-  <body>
+<body>
+    <!-- Navbar -->
+
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container">
-        <a class="navbar-brand" href="#">Agregar logo Aqui</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="portafolio.html">Portafolio</a>
-            </li>
-
-          </ul>
+        <div class="container">
+            <a class="navbar-brand" href="#">Agregar logo Aqui</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="portafolio.html">Portafolio</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </div>
     </nav>
-    <h1>Curriculum Vitae</h1>
 
-    <img
-      style="border-radius: 550px"
-      width="25%"
-      src="./assets/img/me.jpg"
-      alt="mi foto de perfil"
-    />
+    <!-- Carrusel -->
 
+    <div id="carouselExampleCaptions" class="carousel slide">
+
+    </div>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <div class="line">
+            <div class="carousel-caption d-none d-md-block">
+                <h5 class="cv_title">Curriculum Vitae</h5>
+                <h1 class="title_name">ROSA MORALES</h1>
+            </div>
+            </div>
+        </div>
+    </div>
+    </div>
+
+    <img style="border-radius: 550px" width="25%" src="./assets/img/me.jpg" alt="mi foto de perfil" />
+
+
+
+<main class="container">
+    <div class="row">
+<div class="col-md-6 bg-success">
     <h2>Rosa Morales Rojas</h2>
+</div>
+<div class="col-md-6">2</div>
+
+
+    </div>
+
+</main>
+
+    
 
     <h4>Resumen</h4>
 
     <p>
-      La curiosidad y las ganas de aprender me ubico laboralmente en el mundo IT
-      por más de 10 años; Estudiando por primera vez en el año 2005 Diseño
-      gráfico, se presento la inquietud por conocer lo que estaba más allá de
-      las aplicaciones, entender el proceso completo y así ser un profesional
-      integral. En mi recorrido me encontré con el área de la Docencia,
-      impartiendo clases de UX. Mi insignia es trabajar al lado de los
-      stakeholders, involucrarme en el modelo de negocio, para así entender las
-      necesidades y generar una experiencia de usuario de calidad, asesorando,
-      investigando y diseñando. Inquieta y en constante aprendizaje.
+        La curiosidad y las ganas de aprender me ubico laboralmente en el mundo IT
+        por más de 10 años; Estudiando por primera vez en el año 2005 Diseño
+        gráfico, se presento la inquietud por conocer lo que estaba más allá de
+        las aplicaciones, entender el proceso completo y así ser un profesional
+        integral. En mi recorrido me encontré con el área de la Docencia,
+        impartiendo clases de UX. Mi insignia es trabajar al lado de los
+        stakeholders, involucrarme en el modelo de negocio, para así entender las
+        necesidades y generar una experiencia de usuario de calidad, asesorando,
+        investigando y diseñando. Inquieta y en constante aprendizaje.
     </p>
 
     <h2>Datos Personales</h2>
 
     <ul>
-      <li>Nombre: Rosa Alexandra Morales Rojas</li>
-      <li>Lugar de nacimiento: San Carlos</li>
-      <li>Fecha de Nacimiento: 22 Marzo 1984</li>
+        <li>Nombre: Rosa Alexandra Morales Rojas</li>
+        <li>Lugar de nacimiento: San Carlos</li>
+        <li>Fecha de Nacimiento: 22 Marzo 1984</li>
     </ul>
 
     <h2>Formación</h2>
@@ -83,52 +107,44 @@
     <h3>Estudios</h3>
 
     <ul>
-      <li>Product Manager | Coderhouse 2021</li>
-      <li>UX/UI Design Foundations | Uxcel 2020</li>
-      <li>
-        Diseño Gráfica, Instituto ESUCOMEX Marzo 2015 - Noviembre 2017 |
-        Instituto Esucomex | Egresado/Titulado
-      </li>
-      <li>
-        Administración de Redes Comunicacionales Septiembre 2005 - Diciembre
-        2005 | Fundacion de Formación para el Trabajo Romanos XII
-      </li>
+        <li>Product Manager | Coderhouse 2021</li>
+        <li>UX/UI Design Foundations | Uxcel 2020</li>
+        <li>
+            Diseño Gráfica, Instituto ESUCOMEX Marzo 2015 - Noviembre 2017 |
+            Instituto Esucomex | Egresado/Titulado
+        </li>
+        <li>
+            Administración de Redes Comunicacionales Septiembre 2005 - Diciembre
+            2005 | Fundacion de Formación para el Trabajo Romanos XII
+        </li>
     </ul>
 
     <h2>Experiencia laboral</h2>
     <ol>
-      <li>Cenco | Diseñador App | Abril 2022 a la actualidad</li>
-      <li>Mira 360 | Diseñador gráfico y Desarrollo web | 2018/2019</li>
-      <li>Hiway | Business operation assistant | 2005/2018</li>
+        <li>Cenco | Diseñador App | Abril 2022 a la actualidad</li>
+        <li>Mira 360 | Diseñador gráfico y Desarrollo web | 2018/2019</li>
+        <li>Hiway | Business operation assistant | 2005/2018</li>
     </ol>
 
-    <a target="_blank" href="./portafolio.html"
-      ><button
-        style="
+    <a target="_blank" href="./portafolio.html"><button style="
           width: 200px;
           height: 60px;
           background-color: rgb(34, 123, 178);
           border-radius: 25px;
           color: aliceblue;
-        "
-      >
-        Ir al Portafolio
-      </button></a
-    >
+        ">
+            Ir al Portafolio
+        </button></a>
 
     <h3>Si quieres conocer mi perfil te invito a seguirme en Linkedin</h3>
 
-    <a target="_blank" href="https://www.linkedin.com/in/rosa-morales-rojas/"
-      ><img width="80px" src="./assets/img/linkedin.png" alt="Logo linkedin"
-    /></a>
+    <a target="_blank" href="https://www.linkedin.com/in/rosa-morales-rojas/"><img width="80px"
+            src="./assets/img/linkedin.png" alt="Logo linkedin" /></a>
 
+    <!-- Script Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+    </script>
+</body>
 
-<!-- Script Bootstrap -->
-    <script
-src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
-
-  </body>
 </html>
