--- a/index.html
+++ b/index.html
@@ -6,23 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Curriculum</title>
 
-<!-- CDN Bootstrap -->
+    <!-- CDN Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
 
-<!-- Google fonts Poppins -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400&display=swap" rel="stylesheet">
+    <!-- Google fonts Poppins -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400&display=swap" rel="stylesheet">
 
-        <!-- Mi estilo css -->
-
+    <!-- Mi estilo css -->
     <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
 <body>
-    <!-- Navbar -->
 
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container">
             <a class="navbar-brand" href="#">Agregar logo Aqui</a>
@@ -43,7 +42,7 @@
         </div>
     </nav>
 
-    <!-- Carrusel -->
+    <!-- Banner -->
 
     <div id="carouselExampleCaptions" class="carousel slide">
 
@@ -51,54 +50,60 @@
     <div class="carousel-inner">
         <div class="carousel-item active">
             <div class="line">
-            <div class="carousel-caption d-none d-md-block">
-                <h5 class="cv_title">Curriculum Vitae</h5>
-                <h1 class="title_name">ROSA MORALES</h1>
-            </div>
+                <div class="carousel-caption d-none d-md-block">
+                    <h5 class="cv_title">Curriculum Vitae</h5>
+                    <h1 class="title_name">ROSA MORALES</h1>
+                </div>
             </div>
         </div>
     </div>
     </div>
 
-    <img style="border-radius: 550px" width="25%" src="./assets/img/me.jpg" alt="mi foto de perfil" />
+    <!-- Resumen -->
+    <main class="container my-5">
+        <div class="row">
+            <div class="col-md-6 p-5 d-flex justify-content-center">
+                <h4 class="
+            }
+            ">Resumen</h4>
+            </div>
+            <div class="col-md-6">
+                <p class="resumen_paragraph">
+                    La curiosidad y las ganas de aprender me ubico laboralmente en el mundo IT
+                    por más de 10 años; Estudiando por primera vez en el año 2005 Diseño
+                    gráfico, se presento la inquietud por conocer lo que estaba más allá de
+                    las aplicaciones, entender el proceso completo y así ser un profesional
+                    integral. En mi recorrido me encontré con el área de la Docencia,
+                    impartiendo clases de UX. Mi insignia es trabajar al lado de los
+                    stakeholders, involucrarme en el modelo de negocio, para así entender las
+                    necesidades y generar una experiencia de usuario de calidad, asesorando,
+                    investigando y diseñando. Inquieta y en constante aprendizaje.
+                </p>
+            </div>
+        </div>
+    </main>
 
 
+    <section class="container">
+        <div class="row">
+            <div class="col-md-6 bg-success p-5 d-flex justify-content-center">
+            </div>
+            <div class="col-md-6">
+                <h2>Datos Personales</h2>
 
-<main class="container">
-    <div class="row">
-<div class="col-md-6 bg-success">
-    <h2>Rosa Morales Rojas</h2>
-</div>
-<div class="col-md-6">2</div>
+                <ul>
+                    <li>Nombre: Rosa Alexandra Morales Rojas</li>
+                    <li>Lugar de nacimiento: San Carlos</li>
+                    <li>Fecha de Nacimiento: 22 Marzo 1984</li>
+                </ul>
+            </div>
+        </div>
 
+    </section>
 
-    </div>
+    <!-- 
+                <img class="" src="./assets/img/me.jpg" alt="mi foto de perfil" /> -->
 
-</main>
-
-    
-
-    <h4>Resumen</h4>
-
-    <p>
-        La curiosidad y las ganas de aprender me ubico laboralmente en el mundo IT
-        por más de 10 años; Estudiando por primera vez en el año 2005 Diseño
-        gráfico, se presento la inquietud por conocer lo que estaba más allá de
-        las aplicaciones, entender el proceso completo y así ser un profesional
-        integral. En mi recorrido me encontré con el área de la Docencia,
-        impartiendo clases de UX. Mi insignia es trabajar al lado de los
-        stakeholders, involucrarme en el modelo de negocio, para así entender las
-        necesidades y generar una experiencia de usuario de calidad, asesorando,
-        investigando y diseñando. Inquieta y en constante aprendizaje.
-    </p>
-
-    <h2>Datos Personales</h2>
-
-    <ul>
-        <li>Nombre: Rosa Alexandra Morales Rojas</li>
-        <li>Lugar de nacimiento: San Carlos</li>
-        <li>Fecha de Nacimiento: 22 Marzo 1984</li>
-    </ul>
 
     <h2>Formación</h2>
 
