--- a/portafolio.html
+++ b/portafolio.html
@@ -1,56 +1,257 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portafolio</title>
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Portafolio</title>
 
-    <link rel="stylesheet" href="./assets/css/style.css" />
-  </head>
+  <!-- CDN Bootstrap -->
 
-  <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container">
-        <a class="navbar-brand" href="#">Agregar logo Aqui</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div
-          class="collapse navbar-collapse justify-content-end"
-          id="navbarNav"
-        >
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="portafolio.html">Portafolio</a>
-            </li>
-          </ul>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+
+  <!-- Google fonts Poppins -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400&display=swap" rel="stylesheet">
+
+  <!-- Mi estilo css -->
+
+  <link rel="stylesheet" href="./assets/css/style.css" />
+</head>
+
+<body>
+
+  <!-- Navbar -->
+
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container">
+      <a class="navbar-brand" href="#">Agregar logo Aqui</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="portafolio.html">Portafolio</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+
+  <!-- Banner -->
+
+  <div id="carouselExampleCaptions" class="carousel slide">
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active banner_portafolio">
+      <div class="line">
+        <div class="carousel-caption d-none d-md-block">
+          <h1 class="title_portafolio d-flex justify-content-end">Portafolio</h1>
         </div>
       </div>
-    </nav>
-    <h1>Portafolio</h1>
+    </div>
+  </div>
+  </div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+
+   <!-- Acerca de mi -->
+
+   <section
+   id="Acerca-de-mi"
+   class="container text-center my-5 pt-5 scroll-page"
+ >
+   <img class="quote-right" src="./assets/img/right.png" alt="quote right" />
+   <h2 class="display-3 fw-bold my-4 d-inline-block">Acerca de mi</h2>
+   <img class="quote-left" src="./assets/img/left.png" alt="quote left" />
+
+   <h4 class="my-4">
+     Actualmente me desempeño como lider de Diseño en una empresa de retail
+     Chilena.
+   </h4>
+
+   <div class="row">
+     <div class="col-12 col-md-4">
+       <img
+         class="my-3"
+         src="./assets/img/web-design.png"
+         alt="Diseño Gráfico"
+       />
+       <h3 class="my-3 fw-bold">Diseño Gráfico</h3>
+
+       <p class="my-3 about-paragraph">
+         El diseño gráfico transforma ideas en impactantes experiencias
+         visuales. Nuestro equipo crea conexiones visuales cautivadoras para
+         destacar la marca y comunicar un mensaje de manera memorable. Desde
+         logotipos hasta interfaces digitales, damos vida conceptos con
+         creatividad y eficacia.
+       </p>
+     </div>
+     <div class="col-12 col-md-4">
+       <img
+         class="my-3"
+         src="./assets/img/coding.png"
+         alt="Desarrollo web"
+       />
+
+       <h3 class="my-3 fw-bold">Frontend</h3>
+       <p class="my-3 about-paragraph">
+         Optimiza tu presencia digital con el servicio de Desarrollo
+         Frontend. Creamos experiencias de usuario intuitivas y atractivas
+         que potencian la interacción. Desde interfaces modernas hasta
+         rendimiento excepcional, impulsamos tu plataforma hacia el futuro
+         digital."
+       </p>
+     </div>
+     <div class="col-12 col-md-4">
+       <img
+         class="my-3"
+         src="./assets/img/front-end.png"
+         alt="Experiencia usuario"
+       />
+
+       <h3 class="my-3 fw-bold">Experiencia Usuario</h3>
+       <p class="my-3 about-paragraph">
+         Transforma tu presencia en línea con nuestra atención al detalle en
+         Experiencia de Usuario (UX). Creando interacciones intuitivas y
+         agradables, aseguramos que cada visita sea memorable. Eleva la
+         satisfacción del usuario y destaca en la web con nuestra dedicación
+         a una experiencia inigualable."
+       </p>
+     </div>
+   </div>
+ </section>
+ 
+ <!-- Sección mis trabajos -->
+
+ <section id="Mis-trabajos" class="my-5 p-5 bg-black scroll-page">
+  <h2 class="display-4 fw-bold text-center text-light m-5">Mis trabajos</h2>
+  <div class="row">
+    <div class="col-12 col-sm-4 py-2">
+      <div class="card">
+        <img
+          class="w-100"
+          src="./assets/img/des-landing.png"
+          alt="Desafío Landing"
+        />
+        <div class="card-body">
+          <h5 class="card-title fw-bold">Landing de Productos</h5>
+          <p class="card-text">
+            Este trabajo consistio a una landing la cual mostraba la venta
+            de productos, su desarrollo fue con html5, css3 y se incorpora
+            archivo de reseteo normalize.
+          </p>
+          <button type="button" class="btn btn-outline-warning btn-dark">
+            <a class="landing-anchor" href="landing.html">Ver más</a>
+          </button>
+        </div>
+      </div>
+    </div>
+    <div class="col-12 col-sm-4 py-2">
+      <div class="card">
+        <img
+          class="w-100"
+          src="./assets/img/des-iguana.png"
+          alt="Desafío Iguana"
+        />
+
+        <div class="card-body">
+          <h5 class="card-title fw-bold">Iguana Page</h5>
+          <p class="card-text">
+            Iguana page fue un desarrollo con Flexbox en css, Se adiciona
+            archivo css de Font Awesone para los iconos. Su desarrollo fue
+            con html5 y css3.
+          </p>
+          <button type="button" class="btn btn-outline-warning btn-dark">
+            <a class="iguana-anchor" href="iguana.html">Ver más</a>
+          </button>
+        </div>
+      </div>
+    </div>
+    <div class="col-12 col-sm-4 py-2">
+      <div class="card">
+        <img src="./assets/img/des-cuppon.png" alt="Desafío Cuppon" />
+
+        <div class="card-body">
+          <h5 class="card-title fw-bold">
+            Cuppon Experiencias y Servicios
+          </h5>
+          <p class="card-text">
+            En el proyecto Cuppon se implemento framework css Bootstrap.
+            Este desarrollo fue diseñado con html5 y css3.
+          </p>
+          <button type="button" class="btn btn-outline-warning btn-dark cuppon-anchor">
+            <a class="cuppon-anchor" href="cuppon.html">Ver más</a>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Seccion Formulario de contacto -->
+
+<section id="Contacto" class="container my-5 pt-5 scroll-page">
+  <h2 class="display-4 fw-bold text-center my-5">Contáctame</h2>
+
+  <h4 class="text-center my-4 d-none d-md-block">
+    Tienes un proyecto de diseño, desarrollo web o de experiencia de
+    usuario, no dudes en contactarnos para modelar tu negocio con un café
+    ☕️
+  </h4>
+
+  <form>
+    <div class="form-group mb-4">
+      <label class="mb-2">Nombre</label>
+      <input class="form-control" placeholder="Nombre" />
+    </div>
+
+    <div class="form-group mb-4">
+      <label class="mb-2">Correo electrónico</label>
+      <input class="form-control" placeholder="Correo electrónico" />
+    </div>
+
+    <div class="form-group">
+      <label class="mb-2">Mensaje</label>
+      <textarea
+        class="form-control"
+        placeholder="Escribe aquí tu mensaje"
+      ></textarea>
+    </div>
+
+    <div class="my-3 text-end">
+      <button class="btn btn-outline-warning btn-dark px-5">Enviar</button>
+    </div>
+  </form>
+</section>
+
+<!-- Footer -->
+
+<footer class="bg-dark text-center text-light p-4">
+  <p class="mb-0">
+    Desafío Git y Github Diciembre 2023. Todos los derechos reservados.
+  </p>
+</footer>
+
+<script
+  src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+  integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+  crossorigin="anonymous"
+></script>
+<script
+  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+  integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+  crossorigin="anonymous"
+></script>
+
+
+</body>
+
 </html>
