--- a/portafolio.html
+++ b/portafolio.html
@@ -25,9 +25,12 @@
 
   <!-- Navbar -->
 
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Agregar logo Aqui</a>
+      <a class="navbar-brand" href="#">
+        <img class="w-50" src="./assets/img/terminal.png" alt="">
+
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
