--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <img class="w-50" src="./assets/img/terminal.png" alt="">
+
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,10 +35,23 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="portafolio.html">Portafolio</a>
+
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" role="" data-bs-toggle="dropdown" aria-expanded="false"
+                            href="portafolio.html">Portafolio</a>
+
+                        <ul class="dropdown-menu">
+                       
+
+                            <li><a class="dropdown-item" href="landing.html">Landing de Productos</a></li>
+                            <li><a class="dropdown-item" href="iguana.html">Iguana Page</a></li>
+                            <li><a class="dropdown-item" href="cuppon.html">Cuppon</a></li>
+
+                            <li><a class="dropdown-item bg-dark text-white" href="portafolio.html">Ver todo Portafolio</a></li>
+
+                        </ul>
                     </li>
                 </ul>
             </div>
@@ -65,19 +79,32 @@
     <main class="container-fluid my-5 p-5 text-bg-dark">
         <div class="row">
             <div class="col-md-6 p-5 d-flex justify-content-center">
-                <h2 class="">Resumen</h2>
+                <h2 class="">Acerca de Mi</h2>
             </div>
             <div class="col-md-6">
                 <p class="resumen_paragraph">
-                    La curiosidad y las ganas de aprender me ubico laboralmente en el mundo IT
-                    por más de 10 años; Estudiando por primera vez en el año 2005 Diseño
-                    gráfico, se presento la inquietud por conocer lo que estaba más allá de
-                    las aplicaciones, entender el proceso completo y así ser un profesional
-                    integral. En mi recorrido me encontré con el área de la Docencia,
-                    impartiendo clases de UX. Mi insignia es trabajar al lado de los
-                    stakeholders, involucrarme en el modelo de negocio, para así entender las
-                    necesidades y generar una experiencia de usuario de calidad, asesorando,
-                    investigando y diseñando. Inquieta y en constante aprendizaje.
+                    La curiosidad y las ganas de aprender me ubico laboralmente en el mundo IT por más de 10 años;
+                    Estudiando por primera vez en el año 2005 Diseño gráfico, se presento la inquietud por conocer lo
+                    que estaba más allá de las aplicaciones, entender el proceso completo y así ser un profesional
+                    integral.
+                    <p class="resumen_paragraph">En mi recorrido me encontré con el área de la Docencia, impartiendo UX
+                        y Fundamentos de
+                        desarrollo
+                        web en la Academia Desafío Latam.</p>
+
+                    <p class="resumen_paragraph">Mi insignia es trabajar al lado de los stakeholders, involucrarme en el
+                        modelo de negocio de cada
+                        empresa, para así entender las necesidades y generar una experiencia de usuario de calidad,
+                        asesorando, investigando y diseñando.
+                    </p>
+
+
+                    <p class="resumen_paragraph"> Actualmente soy Design Lead del área de Diseño Marketing en Paris
+                        Cencosud, feliz, motivada y
+                        disfrutando el viaje.</p>
+
+                    <p class="resumen_paragraph"> Inquieta y en constante aprendizaje.
+                    </p>
                 </p>
             </div>
         </div>
@@ -138,7 +165,8 @@
                 <ul class="my-5">
                     <li>Lugar de nacimiento: San Carlos</li>
                     <li>Fecha de Nacimiento: 22 Marzo 1984</li>
-                    <li><a target="_blank" class="text-left" href="https://www.linkedin.com/in/rosa-morales-rojas/">Linkedin</a>
+                    <li><a target="_blank" class="text-left"
+                            href="https://www.linkedin.com/in/rosa-morales-rojas/">Linkedin</a>
                     </li>
                 </ul>
             </div>
