--- a/portafolio.html
+++ b/portafolio.html
@@ -27,7 +27,7 @@
 
   <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="index.html">
         <img class="w-50" src="./assets/img/terminal.png" alt="">
 
       </a>
@@ -40,8 +40,15 @@
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="index.html">Home</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="portafolio.html">Portafolio</a>
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false" href="portafolio.html">Portafolio</a>
+            
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="landing.html">Landing de Productos</a></li>
+              <li><a class="dropdown-item" href="iguana.html">Iguana Page</a></li>
+              <li><a class="dropdown-item" href="cuppon.html">Cuppon</a></li>
+            </ul>
           </li>
         </ul>
       </div>
@@ -179,7 +186,7 @@
       </div>
     </div>
     <div class="col-12 col-sm-4 py-2">
-      <div class="card">
+      <div class="card card-height">
         <img src="./assets/img/des-cuppon.png" alt="Desafío Cuppon" />
 
         <div class="card-body">
@@ -204,11 +211,11 @@
 <section id="Contacto" class="container my-5 pt-5 scroll-page">
   <h2 class="display-4 fw-bold text-center my-5">Contáctame</h2>
 
-  <h4 class="text-center my-4 d-none d-md-block">
+  <p class="text-center my-4 d-none d-md-block contact_paragraph">
     Tienes un proyecto de diseño, desarrollo web o de experiencia de
     usuario, no dudes en contactarnos para modelar tu negocio con un café
     ☕️
-  </h4>
+  </p>
 
   <form>
     <div class="form-group mb-4">
@@ -230,10 +237,13 @@
     </div>
 
     <div class="my-3 text-end">
-      <button class="btn btn-outline-warning btn-dark px-5">Enviar</button>
+      <button class="btn btn-outline-warning btn-dark px-5">
+        <a class="sendmail_landing" href="sendmail.html">Enviar</a>
+      </button>
     </div>
   </form>
 </section>
+
 
 <!-- Footer -->
 
