se agrega link a repo en portafolio

--- a/sendmail.html
+++ b/sendmail.html
@@ -36,8 +36,7 @@
 
 <footer class="bg-dark text-center text-light p-4">
   <p class="mb-0">
-    Desafío Git y Github Diciembre 2023. Todos los derechos reservados.
-  </p>
+    Todos los Derechos reservados- G64 2024  </p>
 </footer>
 
 <script
