--- a/portafolio.html
+++ b/portafolio.html
@@ -42,8 +42,9 @@
           </li>
 
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false" href="portafolio.html">Portafolio</a>
-            
+            <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false"
+              href="portafolio.html">Portafolio</a>
+
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="landing.html">Landing de Productos</a></li>
               <li><a class="dropdown-item" href="iguana.html">Iguana Page</a></li>
@@ -63,7 +64,7 @@
   <div class="carousel-inner">
     <div class="carousel-item active banner_portafolio">
       <div class="line">
-        <div class="carousel-caption d-none d-md-block">
+        <div class="carousel-caption d-md-block">
           <h1 class="title_portafolio d-flex justify-content-end">Portafolio</h1>
         </div>
       </div>
@@ -72,197 +73,181 @@
   </div>
 
 
-   <!-- Acerca de mi -->
+  <!-- Acerca de mi -->
 
-   <section
-   id="Acerca-de-mi"
-   class="container text-center my-5 pt-5 scroll-page"
- >
-   <img class="quote-right" src="./assets/img/right.png" alt="quote right" />
-   <h2 class="display-3 fw-bold my-4 d-inline-block">Acerca de mi</h2>
-   <img class="quote-left" src="./assets/img/left.png" alt="quote left" />
+  <section id="Acerca-de-mi" class="container text-center my-5 pt-5 scroll-page">
+    <img class="quote-right" src="./assets/img/right.png" alt="quote right" />
+    <h2 class="display-3 fw-bold my-4 d-inline-block">Acerca de mi</h2>
+    <img class="quote-left" src="./assets/img/left.png" alt="quote left" />
 
-   <h4 class="my-4">
-     Actualmente me desempeño como lider de Diseño en una empresa de retail
-     Chilena.
-   </h4>
+    <h4 class="my-4">
+      Actualmente me desempeño como lider de Diseño en una empresa de retail
+      Chilena.
+    </h4>
 
-   <div class="row">
-     <div class="col-12 col-md-4">
-       <img
-         class="my-3"
-         src="./assets/img/web-design.png"
-         alt="Diseño Gráfico"
-       />
-       <h3 class="my-3 fw-bold">Diseño Gráfico</h3>
+    <div class="row">
+      <div class="col-12 col-md-4">
+        <img class="my-3" src="./assets/img/web-design.png" alt="Diseño Gráfico" />
+        <h3 class="my-3 fw-bold">Diseño Gráfico</h3>
 
-       <p class="my-3 about-paragraph">
-         El diseño gráfico transforma ideas en impactantes experiencias
-         visuales. Nuestro equipo crea conexiones visuales cautivadoras para
-         destacar la marca y comunicar un mensaje de manera memorable. Desde
-         logotipos hasta interfaces digitales, damos vida conceptos con
-         creatividad y eficacia.
-       </p>
-     </div>
-     <div class="col-12 col-md-4">
-       <img
-         class="my-3"
-         src="./assets/img/coding.png"
-         alt="Desarrollo web"
-       />
+        <p class="my-3 about-paragraph">
+          El diseño gráfico transforma ideas en impactantes experiencias
+          visuales. Nuestro equipo crea conexiones visuales cautivadoras para
+          destacar la marca y comunicar un mensaje de manera memorable. Desde
+          logotipos hasta interfaces digitales, damos vida conceptos con
+          creatividad y eficacia.
+        </p>
+      </div>
+      <div class="col-12 col-md-4">
+        <img class="my-3" src="./assets/img/coding.png" alt="Desarrollo web" />
 
-       <h3 class="my-3 fw-bold">Frontend</h3>
-       <p class="my-3 about-paragraph">
-         Optimiza tu presencia digital con el servicio de Desarrollo
-         Frontend. Creamos experiencias de usuario intuitivas y atractivas
-         que potencian la interacción. Desde interfaces modernas hasta
-         rendimiento excepcional, impulsamos tu plataforma hacia el futuro
-         digital."
-       </p>
-     </div>
-     <div class="col-12 col-md-4">
-       <img
-         class="my-3"
-         src="./assets/img/front-end.png"
-         alt="Experiencia usuario"
-       />
+        <h3 class="my-3 fw-bold">Frontend</h3>
+        <p class="my-3 about-paragraph">
+          Optimiza tu presencia digital con el servicio de Desarrollo
+          Frontend. Creamos experiencias de usuario intuitivas y atractivas
+          que potencian la interacción. Desde interfaces modernas hasta
+          rendimiento excepcional, impulsamos tu plataforma hacia el futuro
+          digital."
+        </p>
+      </div>
+      <div class="col-12 col-md-4">
+        <img class="my-3" src="./assets/img/front-end.png" alt="Experiencia usuario" />
 
-       <h3 class="my-3 fw-bold">Experiencia Usuario</h3>
-       <p class="my-3 about-paragraph">
-         Transforma tu presencia en línea con nuestra atención al detalle en
-         Experiencia de Usuario (UX). Creando interacciones intuitivas y
-         agradables, aseguramos que cada visita sea memorable. Eleva la
-         satisfacción del usuario y destaca en la web con nuestra dedicación
-         a una experiencia inigualable."
-       </p>
-     </div>
-   </div>
- </section>
- 
- <!-- Sección mis trabajos -->
+        <h3 class="my-3 fw-bold">Experiencia Usuario</h3>
+        <p class="my-3 about-paragraph">
+          Transforma tu presencia en línea con nuestra atención al detalle en
+          Experiencia de Usuario (UX). Creando interacciones intuitivas y
+          agradables, aseguramos que cada visita sea memorable. Eleva la
+          satisfacción del usuario y destaca en la web con nuestra dedicación
+          a una experiencia inigualable."
+        </p>
+      </div>
+    </div>
+  </section>
 
- <section id="Mis-trabajos" class="my-5 p-5 bg-black scroll-page">
-  <h2 class="display-4 fw-bold text-center text-light m-5">Mis trabajos</h2>
-  <div class="row">
-    <div class="col-12 col-sm-4 py-2">
-      <div class="card">
-        <img
-          class="w-100"
-          src="./assets/img/des-landing.png"
-          alt="Desafío Landing"
-        />
-        <div class="card-body">
-          <h5 class="card-title fw-bold">Landing de Productos</h5>
-          <p class="card-text">
-            Este trabajo consistio a una landing la cual mostraba la venta
-            de productos, su desarrollo fue con html5, css3 y se incorpora
-            archivo de reseteo normalize.
-          </p>
-          <button type="button" class="btn btn-outline-warning btn-dark">
-            <a class="landing-anchor" href="landing.html">Ver más</a>
-          </button>
+  <!-- Sección mis trabajos -->
+
+  <section id="Mis-trabajos" class="my-5 p-5 bg-black scroll-page">
+    <h2 class="display-4 fw-bold text-center text-light m-5">Mis trabajos</h2>
+    <div class="row">
+      <div class="col-12 col-sm-4 py-2">
+        <div class="card">
+          <img class="w-100" src="./assets/img/des-landing.png" alt="Desafío Landing" />
+          <div class="card-body">
+            <h5 class="card-title fw-bold">Landing de Productos</h5>
+            <p class="card-text">
+              Este trabajo consistio a una landing la cual mostraba la venta
+              de productos, su desarrollo fue con html5, css3 y se incorpora
+              archivo de reseteo normalize.
+            </p>
+            <button type="button" class="btn btn-outline-warning btn-dark">
+              <a class="landing-anchor" href="landing.html">Ver más</a>
+            </button>
+
+            <button type="button" class="btn btn-outline-warning btn-dark">
+              <a target="_blank" class="landing-anchor" href="https://github.com/Dreamsroses/des-landing">Ver Repo</a>
+            </button>
+
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-4 py-2">
+        <div class="card">
+          <img class="w-100" src="./assets/img/des-iguana.png" alt="Desafío Iguana" />
+
+          <div class="card-body">
+            <h5 class="card-title fw-bold">Iguana Page</h5>
+            <p class="card-text">
+              Iguana page fue un desarrollo con Flexbox en css, Se adiciona
+              archivo css de Font Awesone para los iconos. Su desarrollo fue
+              con html5 y css3.
+            </p>
+            <button type="button" class="btn btn-outline-warning btn-dark">
+              <a class="iguana-anchor" href="iguana.html">Ver más</a>
+            </button>
+
+            <button type="button" class="btn btn-outline-warning btn-dark">
+              <a target="_blank" class="iguana-anchor" href="https://github.com/Dreamsroses/des-iguana">Ver repo</a>
+            </button>
+
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-4 py-2">
+        <div class="card card-height">
+          <img src="./assets/img/des-cuppon.png" alt="Desafío Cuppon" />
+
+          <div class="card-body">
+            <h5 class="card-title fw-bold">
+              Cuppon Experiencias y Servicios
+            </h5>
+            <p class="card-text">
+              En el proyecto Cuppon se implemento framework css Bootstrap.
+              Este desarrollo fue diseñado con html5 y css3.
+            </p>
+            <button type="button" class="btn btn-outline-warning btn-dark cuppon-anchor">
+              <a class="cuppon-anchor" href="cuppon.html">Ver más</a>
+            </button>
+
+            <button type="button" class="btn btn-outline-warning btn-dark cuppon-anchor">
+              <a target="_blank" class="cuppon-anchor" href="https://github.com/Dreamsroses/des-cuppon">Ver repo</a>
+            </button>
+          </div>
         </div>
       </div>
     </div>
-    <div class="col-12 col-sm-4 py-2">
-      <div class="card">
-        <img
-          class="w-100"
-          src="./assets/img/des-iguana.png"
-          alt="Desafío Iguana"
-        />
+  </section>
 
-        <div class="card-body">
-          <h5 class="card-title fw-bold">Iguana Page</h5>
-          <p class="card-text">
-            Iguana page fue un desarrollo con Flexbox en css, Se adiciona
-            archivo css de Font Awesone para los iconos. Su desarrollo fue
-            con html5 y css3.
-          </p>
-          <button type="button" class="btn btn-outline-warning btn-dark">
-            <a class="iguana-anchor" href="iguana.html">Ver más</a>
-          </button>
-        </div>
+  <!-- Seccion Formulario de contacto -->
+
+  <section id="Contacto" class="container my-5 pt-5 scroll-page">
+    <h2 class="display-4 fw-bold text-center my-5">Contáctame</h2>
+
+    <p class="text-center my-4 d-none d-md-block contact_paragraph">
+      Tienes un proyecto de diseño, desarrollo web o de experiencia de
+      usuario, no dudes en contactarnos para modelar tu negocio con un café
+      ☕️
+    </p>
+
+    <form>
+      <div class="form-group mb-4">
+        <label class="mb-2">Nombre</label>
+        <input class="form-control" placeholder="Nombre" />
       </div>
-    </div>
-    <div class="col-12 col-sm-4 py-2">
-      <div class="card card-height">
-        <img src="./assets/img/des-cuppon.png" alt="Desafío Cuppon" />
 
-        <div class="card-body">
-          <h5 class="card-title fw-bold">
-            Cuppon Experiencias y Servicios
-          </h5>
-          <p class="card-text">
-            En el proyecto Cuppon se implemento framework css Bootstrap.
-            Este desarrollo fue diseñado con html5 y css3.
-          </p>
-          <button type="button" class="btn btn-outline-warning btn-dark cuppon-anchor">
-            <a class="cuppon-anchor" href="cuppon.html">Ver más</a>
-          </button>
-        </div>
+      <div class="form-group mb-4">
+        <label class="mb-2">Correo electrónico</label>
+        <input class="form-control" placeholder="Correo electrónico" />
       </div>
-    </div>
-  </div>
-</section>
 
-<!-- Seccion Formulario de contacto -->
+      <div class="form-group">
+        <label class="mb-2">Mensaje</label>
+        <textarea class="form-control" placeholder="Escribe aquí tu mensaje"></textarea>
+      </div>
 
-<section id="Contacto" class="container my-5 pt-5 scroll-page">
-  <h2 class="display-4 fw-bold text-center my-5">Contáctame</h2>
-
-  <p class="text-center my-4 d-none d-md-block contact_paragraph">
-    Tienes un proyecto de diseño, desarrollo web o de experiencia de
-    usuario, no dudes en contactarnos para modelar tu negocio con un café
-    ☕️
-  </p>
-
-  <form>
-    <div class="form-group mb-4">
-      <label class="mb-2">Nombre</label>
-      <input class="form-control" placeholder="Nombre" />
-    </div>
-
-    <div class="form-group mb-4">
-      <label class="mb-2">Correo electrónico</label>
-      <input class="form-control" placeholder="Correo electrónico" />
-    </div>
-
-    <div class="form-group">
-      <label class="mb-2">Mensaje</label>
-      <textarea
-        class="form-control"
-        placeholder="Escribe aquí tu mensaje"
-      ></textarea>
-    </div>
-
-    <div class="my-3 text-end">
-      <button class="btn btn-outline-warning btn-dark px-5">
-        <a class="sendmail_landing" href="sendmail.html">Enviar</a>
-      </button>
-    </div>
-  </form>
-</section>
+      <div class="my-3 text-end">
+        <button class="btn btn-outline-warning btn-dark px-5">
+          <a class="sendmail_landing" href="sendmail.html">Enviar</a>
+        </button>
+      </div>
+    </form>
+  </section>
 
 
-<!-- Footer -->
+  <!-- Footer -->
 
-<footer class="bg-dark text-center text-light p-4">
-  <p class="mb-0">
-    Desafío Git y Github Diciembre 2024. Todos los derechos reservados.
-  </p>
-</footer>
+  <footer class="bg-dark text-center text-light p-4">
+    <p class="mb-0">
+      Desafío Git y Github 2024. Todos los derechos reservados.
+    </p>
+  </footer>
 
-<script
-  src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-  integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-  crossorigin="anonymous"
-></script>
-<script
-  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-  integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-  crossorigin="anonymous"
-></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+    integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous">
+  </script>
 
 
 </body>
